auth/experiments/authelia/httproute-private/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia-private
spec:
  hostnames:
  - authelia-private.suffix-automatic-replace
  parentRefs:
  - kind: Gateway
    namespace: gateways
    name: main-private
    sectionName: https-main
  rules:
  - backendRefs:
    - kind: Service
      name: authelia
      port: 80
